cmake_minimum_required(VERSION 3.8)
project(homegear_knx)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        src/PhysicalInterfaces/MainInterface.cpp
        src/PhysicalInterfaces/MainInterface.h
        src/DptConverter.cpp
        src/DptConverter.h
        src/Factory.cpp
        src/Factory.h
        src/KnxIpForwarder.cpp
        src/KnxIpForwarder.h
        src/Gd.cpp
        src/Gd.h
        src/Interfaces.cpp
        src/Interfaces.h
        src/KnxCentral.cpp
        src/KnxCentral.h
        src/Knx.cpp
        src/Knx.h
        src/Cemi.cpp
        src/Cemi.h
        src/KnxIpPacket.cpp
        src/KnxIpPacket.h
        src/KnxPeer.cpp
        src/KnxPeer.h
        src/Search.cpp
        src/Search.h
        src/KnxIpPacket.cpp
        src/KnxIpPacket.h
        src/DatapointTypeParsers/DpstParser.cpp
        src/DatapointTypeParsers/DpstParser.h
        src/DatapointTypeParsers/DpstParserBase.cpp
        src/DatapointTypeParsers/DpstParserBase.h
        src/DatapointTypeParsers/Dpst1Parser.cpp
        src/DatapointTypeParsers/Dpst1Parser.h
        src/DatapointTypeParsers/Dpst2Parser.cpp
        src/DatapointTypeParsers/Dpst2Parser.h
        src/DatapointTypeParsers/Dpst3Parser.cpp
        src/DatapointTypeParsers/Dpst3Parser.h
        src/DatapointTypeParsers/Dpst4Parser.cpp
        src/DatapointTypeParsers/Dpst4Parser.h
        src/DatapointTypeParsers/Dpst5Parser.cpp
        src/DatapointTypeParsers/Dpst5Parser.h
        src/DatapointTypeParsers/Dpst6Parser.cpp
        src/DatapointTypeParsers/Dpst6Parser.h
        src/DatapointTypeParsers/Dpst7Parser.cpp
        src/DatapointTypeParsers/Dpst7Parser.h
        src/DatapointTypeParsers/Dpst8Parser.cpp
        src/DatapointTypeParsers/Dpst8Parser.h
        src/DatapointTypeParsers/Dpst9Parser.cpp
        src/DatapointTypeParsers/Dpst9Parser.h
        src/DatapointTypeParsers/Dpst10Parser.cpp
        src/DatapointTypeParsers/Dpst10Parser.h
        src/DatapointTypeParsers/Dpst11Parser.cpp
        src/DatapointTypeParsers/Dpst11Parser.h
        src/DatapointTypeParsers/Dpst12Parser.cpp
        src/DatapointTypeParsers/Dpst12Parser.h
        src/DatapointTypeParsers/Dpst13Parser.cpp
        src/DatapointTypeParsers/Dpst13Parser.h
        src/DatapointTypeParsers/Dpst14Parser.cpp
        src/DatapointTypeParsers/Dpst14Parser.h
        src/DatapointTypeParsers/Dpst15Parser.cpp
        src/DatapointTypeParsers/Dpst15Parser.h
        src/DatapointTypeParsers/Dpst16Parser.cpp
        src/DatapointTypeParsers/Dpst16Parser.h
        src/DatapointTypeParsers/Dpst17Parser.cpp
        src/DatapointTypeParsers/Dpst17Parser.h
        src/DatapointTypeParsers/Dpst18Parser.cpp
        src/DatapointTypeParsers/Dpst18Parser.h
        src/DatapointTypeParsers/Dpst19Parser.cpp
        src/DatapointTypeParsers/Dpst19Parser.h
        src/DatapointTypeParsers/Dpst20Parser.cpp
        src/DatapointTypeParsers/Dpst20Parser.h
        src/DatapointTypeParsers/Dpst21Parser.cpp
        src/DatapointTypeParsers/Dpst21Parser.h
        src/DatapointTypeParsers/Dpst22Parser.cpp
        src/DatapointTypeParsers/Dpst22Parser.h
        src/DatapointTypeParsers/Dpst23Parser.cpp
        src/DatapointTypeParsers/Dpst23Parser.h
        src/DatapointTypeParsers/Dpst25Parser.cpp
        src/DatapointTypeParsers/Dpst25Parser.h
        src/DatapointTypeParsers/Dpst26Parser.cpp
        src/DatapointTypeParsers/Dpst26Parser.h
        src/DatapointTypeParsers/Dpst27Parser.cpp
        src/DatapointTypeParsers/Dpst27Parser.h
        src/DatapointTypeParsers/Dpst29Parser.cpp
        src/DatapointTypeParsers/Dpst29Parser.h
        src/DatapointTypeParsers/Dpst30Parser.cpp
        src/DatapointTypeParsers/Dpst30Parser.h
        src/DatapointTypeParsers/Dpst206Parser.cpp
        src/DatapointTypeParsers/Dpst206Parser.h
        src/DatapointTypeParsers/Dpst217Parser.cpp
        src/DatapointTypeParsers/Dpst217Parser.h
        src/DatapointTypeParsers/Dpst219Parser.cpp
        src/DatapointTypeParsers/Dpst219Parser.h
        src/DatapointTypeParsers/Dpst222Parser.cpp
        src/DatapointTypeParsers/Dpst222Parser.h
        src/DatapointTypeParsers/Dpst229Parser.cpp
        src/DatapointTypeParsers/Dpst229Parser.h
        src/DatapointTypeParsers/Dpst230Parser.cpp
        src/DatapointTypeParsers/Dpst230Parser.h
        src/DatapointTypeParsers/Dpst232Parser.cpp
        src/DatapointTypeParsers/Dpst232Parser.h
        src/DatapointTypeParsers/Dpst234Parser.cpp
        src/DatapointTypeParsers/Dpst234Parser.h
        src/DatapointTypeParsers/Dpst237Parser.cpp
        src/DatapointTypeParsers/Dpst237Parser.h
        src/DatapointTypeParsers/Dpst238Parser.cpp
        src/DatapointTypeParsers/Dpst238Parser.h
        src/DatapointTypeParsers/Dpst240Parser.cpp
        src/DatapointTypeParsers/Dpst240Parser.h
        src/DatapointTypeParsers/Dpst241Parser.cpp
        src/DatapointTypeParsers/Dpst241Parser.h
        src/DatapointTypeParsers/Dpst244Parser.cpp
        src/DatapointTypeParsers/Dpst244Parser.h
        src/DatapointTypeParsers/Dpst245Parser.cpp
        src/DatapointTypeParsers/Dpst245Parser.h
        src/DatapointTypeParsers/Dpst249Parser.cpp
        src/DatapointTypeParsers/Dpst249Parser.h
        src/DatapointTypeParsers/Dpst250Parser.cpp
        src/DatapointTypeParsers/Dpst250Parser.h
        src/DatapointTypeParsers/Dpst251Parser.cpp
        src/DatapointTypeParsers/Dpst251Parser.h
        )

add_custom_target(homegear COMMAND ../../makeAll.sh SOURCES ${SOURCE_FILES})

add_library(homegear_knx ${SOURCE_FILES})